# spotifier

./: README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
examples/: get_current_users_profile.py  get_the_users_currently_playing_track.py
spotifier/: client.py  oauth.py
tests/: test_spotifier.py
